fix: restrict the walk sequence link click area to the list item

--- a/css/index.css
+++ b/css/index.css
@@ -317,6 +317,7 @@ main .walk-sequence li {
   width: 50%;
   display: flex;
   flex-direction: column;
+  position: relative;
 }
 
 main .walk-sequence a {
